--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "good-console": "^5.0.0",
     "handlebars": "^3.0.3",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "bower": "^1.4.1"
   }
 }
